--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,34 +3,27 @@
 client_id = "ad128ec106a47335e9e98801f0251948"
 name = "swoo-roomnhoom-app"
 handle = "swoo-roomnhoom-app"
-application_url = "https://wicked-meets-unnecessary-considered.trycloudflare.com"
+application_url = "https://machine-poem-boulevard-cook.trycloudflare.com"
 embedded = true
 
 [build]
-include_config_on_deploy = true
 automatically_update_urls_on_dev = true
-
-[webhooks]
-api_version = "2025-04"
-
-  [[webhooks.subscriptions]]
-  topics = [ "app/uninstalled" ]
-  uri = "/webhooks/app/uninstalled"
-
-  [[webhooks.subscriptions]]
-  topics = [ "app/scopes_update" ]
-  uri = "/webhooks/app/scopes_update"
+dev_store_url = "swooapp.myshopify.com"
+include_config_on_deploy = true
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
-scopes = "write_products"
+scopes = "read_customers,read_orders,read_products"
 
 [auth]
 redirect_urls = [
-  "https://wicked-meets-unnecessary-considered.trycloudflare.com/auth/callback",
-  "https://wicked-meets-unnecessary-considered.trycloudflare.com/auth/shopify/callback",
-  "https://wicked-meets-unnecessary-considered.trycloudflare.com/api/auth/callback"
+  "https://machine-poem-boulevard-cook.trycloudflare.com/auth/callback",
+  "https://machine-poem-boulevard-cook.trycloudflare.com/auth/shopify/callback",
+  "https://machine-poem-boulevard-cook.trycloudflare.com/api/auth/callback"
 ]
+
+[webhooks]
+api_version = "2024-04"
 
 [pos]
 embedded = false
