--- a/shopify.web.toml
+++ b/shopify.web.toml
@@ -1,7 +1,6 @@
 name = "remix"
 roles = ["frontend", "backend"]
-webhooks_path = "/webhooks/app/uninstalled"
+webhooks_path = "/webhooks"
 
 [commands]
-predev = "npx prisma generate"
-dev = "npx prisma migrate deploy && npm exec remix vite:dev"
+dev = "npx prisma generate && npx prisma migrate deploy && npm exec remix vite:dev"
