--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "google-auth-library": "^9.15.0",
     "google-spreadsheet": "^4.1.4",
     "googleapis": "^148.0.0",
+    "graphql-sock": "1.0.1",
     "isbot": "^5.1.0",
+    "picomatch": "4.0.2",
     "prisma": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-to-print": "^2.15.1",
-    "vite-tsconfig-paths": "^4.3.1"
+    "vite-tsconfig-paths": "^4.3.1",
+    "ws": "8.18.1"
   },
   "devDependencies": {
     "@remix-run/eslint-config": "^2.7.1",
